Corrected styling with the version history page on mobile

--- a/styles.scss
+++ b/styles.scss
@@ -1294,6 +1294,7 @@ footer {
 		margin: 0px auto;
 		padding: 20px 20px 60px 20px;
 		flex-direction: column;
+		display: block;
 	}
 	
 	h1 {
